shell: Avoid ellipsis of storage read/write and wrap instead
Closes #1536
Fixes #1524

--- a/pkg/shell/shell.css
+++ b/pkg/shell/shell.css
@@ -614,6 +614,12 @@ ul.available-interfaces-group {
     }
 }
 
+@media (max-width: 1814px) {
+    #storage .storage-disk-size {
+        width: 100%;
+    }
+}
+
 #storage .create-storage {
     margin-bottom: 10px;
 }
